--- a/config/hypr/hypr/hyprland.conf
+++ b/config/hypr/hypr/hyprland.conf
@@ -2,6 +2,7 @@ bindl=,switch:Lid Switch,exec,hyprlock
 
 windowrulev2 = pseudo, class:^(fcitx)$
 exec-once = hypridle
+exec = hyprctl setcursor catppuccin-mocha-mauve-cursors 32
 
 ################
 ### MONITORS ###
@@ -24,10 +25,6 @@ workspace = 10, monitor:HDMI-A-1
 ###############
 ### PLUGINS ###
 ###############
-
-plugin:hyprtrails {
-    color = rgba(9370dbff)
-}
 
 plugin:hyprfocus {
     enabled = yes
@@ -77,6 +74,7 @@ exec-once = neko-notify
 exec-once = paplay ~/.sounds/login.ogg
 exec-once = ~/.config/hypr/window-sound.sh
 exec-once = steam
+exec-once = ags
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -149,7 +147,7 @@ decoration {
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
         size = 4
         passes = 1
 
@@ -277,7 +275,7 @@ bind = $mainMod, G, exec, github
 bind = $mainMod, S, exec, flatpak run io.github.kolunmi.Bazaar
 bind = $mainMod, A, exec, ametrine
 bind = CTRL ALT, Space, exec, claude-desktop-native --show
-
+bind = SUPER, SPACE, exec, ags --toggle-window main-menu
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -352,3 +350,6 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 xwayland {
     force_zero_scaling = true
 }
+
+# force kill focused window
+bind = SUPER SHIFT, Q, exec, kill -9 $(hyprctl activewindow -j | jq -r ".pid")
