--- a/config/wofi/wofi/config
+++ b/config/wofi/wofi/config
@@ -1,7 +1,8 @@
 hide_scroll=true
-width=45%
-lines=11
-line_wrap=word
+width=500
+height=400
+lines=10
+line_wrap=off
 term=kitty
 allow_markup=true
 always_parse_args=false
@@ -11,10 +12,11 @@ layer=overlay
 allow_images=true
 sort_order=default
 gtk_dark=true
-prompt=
-image_size=20
+prompt=search apps...
+image_size=24
 display_generic=false
 location=center
 key_expand=Tab
-insensitive=false
+insensitive=true
 single_click=true
+columns=1
