--- a/config/hypr/hypr/hypridle.conf
+++ b/config/hypr/hypr/hypridle.conf
@@ -6,7 +6,7 @@ general {
 
 listener {
     timeout = 300
-    on-timeout = hyprlock && sleep 1 && systemctl suspend
+    on-timeout = hyprlock && sleep 1
 }
 
 listener {
