--- a/config/hypr/hypr/hyprland.conf
+++ b/config/hypr/hypr/hyprland.conf
@@ -4,6 +4,14 @@ windowrulev2 = pseudo, class:^(fcitx)$
 exec-once = hypridle
 exec = hyprctl setcursor catppuccin-mocha-mauve-cursors 32
 
+windowrulev2 = float, title:^(KinitoPet)$
+windowrulev2 = pin, title:^(KinitoPet)$
+windowrulev2 = noborder, title:^(KinitoPet)$
+windowrulev2 = noblur, title:^(KinitoPet)$
+windowrulev2 = noshadow, title:^(KinitoPet)$
+windowrulev2 = size 400 400, title:^(KinitoPet)$
+windowrulev2 = move 100 100, title:^(KinitoPet)$
+
 ################
 ### MONITORS ###
 ################
