--- a/config/kitty/kitty/kitty.conf
+++ b/config/kitty/kitty/kitty.conf
@@ -45,7 +45,7 @@ cursor_text_color #1e1e2e
 url_color #89b4fa
 
 map f11 toggle_fullscreen
-
+# such test. much wow
 active_border_color #b4befe
 inactive_border_color #6c7086
 
